# TaskRails

./: .gitignore  README.md  TaskRails UI 功能地圖.md  TaskRails 完整技術規格書 (Master).md  TaskRails 開發總藍圖.md  build_with_rust.ps1  dev_with_rust.ps1  index.html  package-lock.json  package.json  satellite_boot.txt  tailwind.config.js  task.md  ws_test_out.txt
.github/workflows/: build.yml
.meta/skills/: debugger.json
.taskrails/: project.db
.taskrails/config/: local_env.json
.taskrails/memory-bank/: @architecture.md  @conventions.md  @tech-stack.md
UPDATADEVDOC/: taskrails_ai_prompts_zh_tw.md  taskrails_config_specs_zh_tw.md  taskrails_v2_6_architecture_manual_zh_tw.md
docs/: ARCHITECTURE.md  ARCH_UPGRADE_TASK_v1.0.md  CURRENT_TASKS.md  DESIGN_MCP_BIDIRECTIONAL_CONTROL.md  DEVELOPMENT_AGENT_GUIDE.md  GIT_WORKFLOW_GUIDE.md  INTEGRATION_TEST_RESULTS.md  INTEGRATION_TEST_SCENARIO.md  MANUAL.md  MCP_CONFIG_GUIDE.json  SYSTEM_SPEC.md  TASK_MD_RULES.md  TaskRails_V1.1_Documentation.md  USER_GUIDE.md  USER_GUIDE_PROJECT_SETUP.md  VIBE_CORE_COMPONENT_DIAGRAM.mmd  VIBE_CORE_DATA_FLOW.mmd
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.taskrails/config/: local_env.json
src-tauri/.taskrails/memory-bank/: @active_context.md  @specs.md
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  mcp_hub.rs  memory_bank.rs  project_scanner.rs  state_machine.rs
src-tauri/src/commands/: ai.rs  experience.rs  memory.rs  mod.rs  role.rs  system.rs  task.rs
src-tauri/src/config/: schemas.rs
src-tauri/src/git_ops/: mod.rs
src-tauri/src/mcp/: local_llm.rs  mod.rs  prompt_refiner.rs  sse.rs  stdio.rs  token_monitor.rs
src-tauri/src/satellite/: broadcaster.rs  mod.rs  server.rs
src-tauri/src/sentinel/: mod.rs
src-tauri/src/utils/: ai.rs  cli.rs  mod.rs  skills.rs
src-tauri/tests/: vibe_core_test.rs
taskrails_new_idea/: Developer Onboarding.md  Taskrails Project Handover.md  project_flow.mmd  taskrails_engine.py  taskrails_gui.py  說明.txt
tests/: test_lm_studio.js
(+95 files in other folders)
