[package]
name = "taskrails"
version = "1.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "taskrails"

[[bin]]
name = "taskrails-mcp-stdio"
path = "src/bin/mcp_stdio.rs"

[[bin]]
name = "taskrails"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "taskrails_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"

# Core Engine Dependencies
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.33", features = ["bundled", "time"] }
axum = { version = "0.8" } # Using axum 0.8 / 0.7 for SSE
tower-http = { version = "0.6", features = ["cors"] }
tiktoken-rs = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
reqwest = { version = "0.12", features = ["json", "stream"] }

# v2.6 Architecture Dependencies
actix-web = "4"
actix-ws = "0.3" # Note: This might be redundant if using actix-web-actors
actix-web-actors = "4"
actix = "0.13"
actix-rt = "2"
git2 = { version = "0.20", features = ["ssh"] }
bollard = "0.18"
uuid = { version = "1", features = ["v4", "serde"] } # Ensure UUID generation
rand = "0.8" # For random port/token generation
regex = "1" # For Sentinel Linter parsing
walkdir = "2" # For project structure scanning

[dev-dependencies]
rusqlite = { version = "0.33", features = ["bundled", "time"] }
